--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@prisma/client": "^5.15.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "cookie": "^0.6.0"
+    "cookie": "^0.6.0",
+    "node-ssh": "^13.1.0"
   },
   "devDependencies": {
     "typescript": "^5.5.0",
